<resources>
    <string name="app_name">WhatsApp</string>
    <string name="email_login">Digite seu email</string>
    <string name="senha_login">Digite sua senha</string>
    <string name="semConta_login">Não tem conta? Cadastre-se</string>
    <string name="logar_login">Logar</string>
    <string name="digite_seu_nome_cadastro">Digite seu nome</string>
    <string name="cadastrar_cadastro">Cadastrar</string>
    <string name="cadastrar_image">Icone de user plus</string>
    <string name="pesquisar_menu">Pesquisar</string>
    <string name="configuracoes_menu">Configurações</string>
    <string name="sair_menu">Sair</string>
    <string name="conversas_toolbar">Conversas</string>
    <string name="contatos_toolbar">Contatos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_nome_usuario">Nome do usuário</string>
    <string name="mensagem_config">Este não é o seu nome de usuário nem sua senha. \n Esse nome ficará visível para seus contatos do WhatsApp</string>
    <string name="icon_galeria">icone de galeria</string>
    <string name="icon_camera">Icone de camera</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contentDescription">Icon for fab</string>
    <string name="exemplo_de_mensagem">Este é um exemplo de mensagem</string>
    <string name="title_activity_grupo">GrupoActivity</string>
    <string name="title_activity_cadastro_grupo">CadastroGrupoActivity</string>
</resources>